# hddtemp-bin

./: .gitignore  ChangeLog  Makefile.am  README  config.h.in  configure.ac  hddtemp-0.3-beta14_unix.diff
data/: hddtemp.db
doc/: hddtemp.8
po/: LINGUAS  de.po  fr.po  hddtemp.pot  pt.po  pt_BR.po  ru.po  sv.po
src/: Makefile.am  ata.c  ata.c.orig  atacmds.c  atacmds.c.orig  atacmds.h  atacmds.h.orig  backtrace.c  daemon.c  daemon.c.orig  db.c  db.h  hddtemp.c  hddtemp.h  nvme.c  sata.c  satacmds.c  scsi.c  scsicmds.c  scsicmds.c.orig  scsicmds.h  utf8.c
system/: hddtemp.consoleapp  hddtemp.service  hddtemp.sysconfig
